--- a/static/styles.css
+++ b/static/styles.css
@@ -24,6 +24,9 @@
   }
 .logo-container {
   margin-right: auto;
+  flex-basis: 30%;
+  max-width: 30%;
+  height: 100%;
 }
 
 .navbar-container {
@@ -51,10 +54,12 @@
 
   .logo {
     position: absolute;
-    width: 522px;
-    height: 114px;
+    width: 392px;
+    height: auto;
     left: 154px;
     top: 42px;
+    max-width: 100%;
+    max-height: auto;
   }
 
   .content-space {
@@ -62,50 +67,42 @@
   }
 
   .header-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: left;
     position: relative;
     z-index: 1;
-    margin-left: 156px;
+    bottom: 200px;
+    left: 156px;
+    margin-right: 154px;
 
   }
 
 .header-font {
   color: white;
-  text-align: center;
   margin-top: 0;
   margin-bottom: 0;
+  text-align: left;
 }
 
 .inline {
   display: inline-flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 20px;
 }
 
 .inline h2 {
   font-size: 25px;
-  margin: 20px;
   text-align: center;
 }
-h1 {
-    padding-bottom: 1rem;
-    margin: 0;
+
+.home-rule {
+  color: white;
+  max-width: 100%;
 }
 
-h1.header-font {
-  position: absolute;
-  bottom: 156px;
-  left: 156px;
+.hr-container {
+  margin-right: 154px;
 }
 
-h2 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
 
 
 body{
@@ -137,8 +134,21 @@ footer {
   grid-gap: 78px;
   margin-left: 154px;
   margin-right: 154px;
+  
 
 }
+
+.photo-grid-service {
+  display: grid;
+  grid-template-columns: repeat(3, 465px);
+  grid-template-rows: repeat(1, 465px);
+  grid-gap: 78px;
+  margin-left: 154px;
+  margin-right: 154px;
+  
+
+}
+
 
 .photo-grid img {
   width: 100%;
@@ -149,8 +159,6 @@ footer {
 
 .photo-grid-container {
   position: relative;
-  padding-top: 156px;
-  padding-bottom: 156px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -442,4 +450,270 @@ footer {
   font-size: 18px;
   margin-right: 18px;
   line-height: 47px;
+}
+
+
+/* 
+
+Services page
+
+*/
+
+.service-heading {
+  margin-top: 154px;
+  position: relative;
+  margin-bottom: 20px;
+}
+.service-heading h2 {
+  margin-left: 154px;
+}
+
+
+figure {
+  margin: 0;
+  padding: 0;
+}
+
+figcaption {
+  font-weight: bold;
+  text-align: center;
+  height: 20px;
+  padding-top: 10px;
+}
+
+/* Contact Page */
+
+.contact-box {
+  height: 1078px;
+  width: 1550px;
+  background-color: black;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.contact-text {
+  flex-wrap: wrap; 
+  justify-content: space-between;
+  position: relative;
+  color: white;
+
+
+}
+
+.flex-container { 
+
+  margin-left: 154px;
+  margin-top: 154px;
+
+
+}
+
+.flex-row {
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+
+.flex-row > * {
+  flex-basis: calc(50% - 10px);
+  margin: 5px;
+}
+
+@media (max-width: 768px) {
+  .flex-row > * {
+    flex-basis: 100%;
+  }
+}
+
+.col {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.col img {
+  max-width: 30%;
+  max-height: 30%;
+}
+
+.social-icons-contact {
+  display: flex;
+  align-items: center;
+}
+
+
+/*Safety Page*/
+
+.safety-grid {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 154px;
+}
+
+.box-text {
+
+  width: 456px;
+  height: 303px;
+  text-align: justify;
+  color: black;
+}
+
+.box-text p{
+  font-size: 36px;
+}
+
+.safety-img { 
+  width: 922px;
+  height: 573px;
+  margin-right: 154px;
+  max-width: 922px;
+  
+}
+
+
+.safety-img img {
+  max-width: 922px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.safety-strip {
+  margin-right: 60px;
+}
+
+.cor {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+
+/*About*/
+
+.main{
+  margin:154px;
+}
+
+.experts {
+  font-size: 60px;
+  font-weight: bold;
+  margin-left: 154px;
+}
+
+.photo-grid-about-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 154px;
+}
+
+.photo-grid-about {
+  display: grid;
+  grid-template-columns: repeat(3, 465px);
+  grid-template-rows: repeat(2, 465px);
+  grid-gap: 78px;
+  margin-left: 154px;
+  margin-right: 154px;
+  
+
+}
+
+.photo-grid-about img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+
+/* Home Page */
+
+.home-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+
+.item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+  width: 100%;
+}
+
+.item:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.item img {
+  width: 924px;
+  height: 616px;
+  object-fit: cover;
+}
+
+.item .text {
+  flex: 1;
+  max-width: 684px;
+  width: auto;
+  margin-left: 154px;
+  margin-right: auto;
+  text-align: justify;
+  flex-basis: calc(100% - 924px - 154px);
+}
+.item:first-child {
+  justify-content: flex-end;
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.item:first-child .text {
+  margin-left: auto;
+  margin-right: 154px;
+}
+
+@media screen and (max-width: 767px) {
+  .item {
+    flex-direction: column;
+  }
+  
+  .item img {
+    width: 100%;
+    height: auto;
+  }
+  
+.item .text {
+  flex: 1;
+  max-width: 684px;
+  margin-left: 154px;
+  margin-right: auto;
+  text-align: justify;
+  flex-basis: calc(100% - 924px - 154px);
+}
+}
+
+.home-intro {
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.home-text {
+  font-size: 36px;
+  font-weight: 400;
+
+}
+
+.text h2 {
+  font-weight: bold;
+}
+
+.text ul {
+  font-size: 20px;
 }
