--- a/static/styles.scss
+++ b/static/styles.scss
@@ -122,7 +122,7 @@
 .header-font {
   color: white;
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   text-align: left;
 }
 
@@ -1055,6 +1055,13 @@ figcaption {
     font-size: 30px;
     font-weight: bold;
   }
+
+  .horiz-logo {
+    max-width: 83vw;
+    height: auto;
+    padding: 10px;
+  }
+  
   
     
   
