--- a/static/styles.scss
+++ b/static/styles.scss
@@ -36,7 +36,7 @@
   }
   .header-container {
     position: relative;
-    top: -160px;
+    top: -200px;
 
   }
 
@@ -809,6 +809,9 @@ figcaption {
   .safety-intro {
     font-size: 16px;
   }
+  .safety-small {
+    font-size: smaller;
+  }
   
 
 }
@@ -1091,9 +1094,11 @@ figcaption {
 @media screen and (max-width: 1450px) {
   .sub {
     opacity: 0;
+    height: 0px;
   }
   .home-rule {
     opacity: 0;
+    height: 0px;
   }
 
   .home-container {
