--- a/static/styles.scss
+++ b/static/styles.scss
@@ -782,7 +782,7 @@ figcaption {
   .safety-img { 
     max-width: 200px;
     height: auto;
-    min-width: 400px;
+    min-width: 83vw;
   }
   .box-text {
     text-align: left;
