--- a/static/styles.css
+++ b/static/styles.css
@@ -694,7 +694,7 @@ figcaption {
   .safety-img {
     max-width: 200px;
     height: auto;
-    min-width: 400px;
+    min-width: 83vw;
   }
   .box-text {
     text-align: left;
