--- a/static/styles.scss
+++ b/static/styles.scss
@@ -780,7 +780,7 @@ figcaption {
     justify-content: center;
   }
   .safety-img { 
-    max-width: 200px;
+    max-width: 83vw;
     height: auto;
     min-width: 83vw;
   }
@@ -846,6 +846,7 @@ figcaption {
   align-items: center;
   display: flex;
   justify-content: center;
+  max-width: 83vw;
 }
 
 .strip {
