--- a/static/styles.css
+++ b/static/styles.css
@@ -692,7 +692,7 @@ figcaption {
     justify-content: center;
   }
   .safety-img {
-    max-width: 200px;
+    max-width: 83vw;
     height: auto;
     min-width: 83vw;
   }
@@ -748,6 +748,7 @@ figcaption {
   align-items: center;
   display: flex;
   justify-content: center;
+  max-width: 83vw;
 }
 
 .strip {
