--- a/static/styles.scss
+++ b/static/styles.scss
@@ -734,6 +734,12 @@ figcaption {
   .flex-row > * {
     flex-basis: 100%;
   }
+  .service-image {
+    max-width: 83vw;
+    margin-left: 8.3%;
+    margin-right: 8.3%;
+  }
+  
 }
 
 .col {
